The project already start

--- a/Debora_OutSystem/src/app/start-components/body/body.component.html
+++ b/Debora_OutSystem/src/app/start-components/body/body.component.html
@@ -4,11 +4,11 @@
   </header>
 
   <main>
-      <app-body></app-body>
+      
   </main>
 
   <footer>
      <app-footer></app-footer>
   </footer>
+  <router-outlet></router-outlet>
 </body>
-<!-- <router-outlet></router-outlet> -->
