--- a/Debora_OutSystem/src/app/app.component.html
+++ b/Debora_OutSystem/src/app/app.component.html
@@ -1,4 +1,15 @@
-<app-body></app-body>
+<div>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">OutSystem Class By Debora</span>
+    </div>
+  </nav>
+  <body>
+    <app-body></app-body>
+
+  </body>
+
+</div>
 
 
-<!-- <router-outlet></router-outlet> -->
+
