--- a/Debora_OutSystem/src/app/_start-components/footer/footer.component.css
+++ b/Debora_OutSystem/src/app/_start-components/footer/footer.component.css
@@ -1,9 +1,3 @@
-span {
-  width: fit-content;
-  height: 4vh;
-  display: flex;
-  align-items: center;
-}
 
 a {
   color: aliceblue !important;
@@ -19,3 +13,13 @@ a {
 a:hover {
   color: #f0b686 !important;
 }
+
+/* footer {
+
+    width: fit-content;
+    height: 4vh;
+    display: flex;
+    align-items: center;
+
+
+} */
