--- a/Debora_OutSystem/src/app/_start-components/header/header.component.html
+++ b/Debora_OutSystem/src/app/_start-components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
