fixing css and another

--- a/Debora_OutSystem/src/app/app.component.html
+++ b/Debora_OutSystem/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">OutSystem Class By Debora</span>
+      <span class="navbar-brand mb-0 h1">OutSystems Class By Debora</span>
     </div>
   </nav>
   <body>
