--- a/Debora_OutSystem/src/app/_start-components/body/footer/footer.component.css
+++ b/Debora_OutSystem/src/app/_start-components/body/footer/footer.component.css
@@ -1,4 +1,7 @@
 
+span {
+  font-size: 1.5vh;
+}
 a {
   color: aliceblue !important;
   font-family: "Trebuchet MS", Verdana, sans-serif;
@@ -14,12 +17,3 @@ a:hover {
   color: #f0b686 !important;
 }
 
-/* footer {
-
-    width: fit-content;
-    height: 4vh;
-    display: flex;
-    align-items: center;
-
-
-} */
