--- a/Debora_OutSystem/src/app/_start-components/body/header/header.component.css
+++ b/Debora_OutSystem/src/app/_start-components/body/header/header.component.css
@@ -1,7 +1,20 @@
 
-
-.navbar.navbar-expand-lg.bg-body-tertiary {
+.main {
+  width: 100%;
+  display: flex;
   background: linear-gradient(68.15deg, #f10e0e 14.62%, #09031f 85.61%);
+  max-height: 7vh;
+  font-size: 2vh;
+}
+
+.main-left {
+  width: 50%;
+  margin: 0.5% 0.5% 0.5% 0%;
+}
+
+.main-right {
+  width: 50%;
+  margin: 0.5% 0.5% 0.5% 0%;
 }
 
 
@@ -19,10 +32,16 @@ a.nav-link:hover {
 
 a.nav-link.active {
   font-family: Arial, sans-serif;
+
   color: #ffffff;
   cursor: pointer;
 }
 
 a.nav-link.active:hover {
   color: #f0b686 !important;
+}
+
+img {
+  max-height: 5vh;
+
 }
