--- a/Debora_OutSystem/src/app/_start-components/body/header/header.component.html
+++ b/Debora_OutSystem/src/app/_start-components/body/header/header.component.html
@@ -1,13 +1,30 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" >Home</a>
-        <a class="nav-link">About</a>
-      </div>
-
-    </div>
-    <img [src]="" class="course-thumbnail mat-elevation-z8" />
+<div class="main">
+  <div class="main-left">
+    <ul class="nav ">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+    </ul>
   </div>
-</nav>
+  <div class="main-right">
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a
+          class="nav-link active"
+          aria-current="page"
+          routerLink="/authentication"
+          >Authentication</a
+        >
+      </li>
+      <img
+        [src]="this.localImg | async"
+        class="course-thumbnail mat-elevation-z8"
+      />
+    </ul>
+  </div>
+</div>
+
+
