--- a/Debora_OutSystem/src/app/app.component.css
+++ b/Debora_OutSystem/src/app/app.component.css
@@ -1,5 +1,8 @@
 
-
+span {
+  /* margin: 0 0 0.5% 0; */
+  font-size: 2.5vh;
+}
 
 body {
   margin: 0;
@@ -12,6 +15,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   /* background-attachment: fixed; */
+
 }
 
 .bg-body-tertiary {
@@ -26,4 +30,6 @@ body {
   font-family: Arial, sans-serif;
 
 }
+
+
 
