--- a/Debora_OutSystem/src/app/_start-components/authentication/authentication.component.html
+++ b/Debora_OutSystem/src/app/_start-components/authentication/authentication.component.html
@@ -1,1 +1,24 @@
-<p>authentication works!</p>
+<div class="container">
+  <form action="" >
+    <label for="email" class="form-label">Email</label>
+    <input
+      type="email"
+      id="email"
+      class="form-control"
+      aria-describedby="emailHelpBlock"
+    />
+    <div id="emailHelpBlock" class="form-text">
+      Type you google Email, just Authorized Users.
+    </div>
+    <label for="inputPassword5" class="form-label">Password</label>
+    <input
+      type="password"
+      id="inputPassword5"
+      class="form-control"
+      aria-describedby="passwordHelpBlock"
+    />
+    <div id="passwordHelpBlock" class="form-text">
+      Your Google Password.
+    </div>
+  </form>
+</div>
