--- a/Debora_OutSystem/src/app/_start-components/authentication/authentication.component.html
+++ b/Debora_OutSystem/src/app/_start-components/authentication/authentication.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <form action="" >
     <label for="email" class="form-label">Email</label>
     <input
@@ -21,4 +21,14 @@
       Your Google Password.
     </div>
   </form>
+</div> -->
+<div class="login container">
+
+  <h2>Sign In Just Gmail Pls:</h2>
+
+  <div id="firebaseui-auth-container" class="auth-container">
+
+
+  </div>
+
 </div>
