--- a/Debora_OutSystem/src/app/_start-pages/start-components/body/body.component.html
+++ b/Debora_OutSystem/src/app/_start-pages/start-components/body/body.component.html
@@ -1,12 +1,16 @@
 <div class="body">
-  <header>
-    <app-header></app-header>
-  </header>
+   <div class="header">
+     <app-header></app-header>
 
-  <main></main>
+   </div>
+   <div class="main">
+     <app-main><router-outlet></router-outlet></app-main>
+   </div>
+   <div class="footer">
+     <app-footer></app-footer>
+   </div>
 
-  <footer>
-    <app-footer></app-footer>
-  </footer>
-  <router-outlet></router-outlet>
+
+
+
 </div>
