--- a/Debora_OutSystem/src/app/_start-pages/start-components/body/body.component.html
+++ b/Debora_OutSystem/src/app/_start-pages/start-components/body/body.component.html
@@ -1,14 +1,9 @@
 <div class="body">
-   <div class="header">
-     <app-header></app-header>
 
-   </div>
    <div class="main">
-     <app-main><router-outlet></router-outlet></app-main>
+     <app-main></app-main>
    </div>
-   <div class="footer">
-     <app-footer></app-footer>
-   </div>
+   
 
 
 
