--- a/Debora_OutSystem/src/app/_start-pages/start-components/body/header/header.component.html
+++ b/Debora_OutSystem/src/app/_start-pages/start-components/body/header/header.component.html
@@ -4,12 +4,12 @@
     <mat-tab label="OutSystems"> OutSystems </mat-tab>
     <mat-tab label="DataBases"> DataBases </mat-tab>
     <mat-tab label="About"> About </mat-tab>
-    <mat-tab label="Authentication"> Authentication </mat-tab>
 
-    <img
+
+    <!-- <img
       [src]="this.localAvatar$ | async"
       class="course-thumbnail mat-elevation-z8"
-    />
+    /> -->
   </mat-tab-group>
 
 </header>
