need to fix the color from mat-tab

--- a/Debora_OutSystem/src/app/_start-pages/start-components/body/header/header.component.html
+++ b/Debora_OutSystem/src/app/_start-pages/start-components/body/header/header.component.html
@@ -12,10 +12,10 @@
     </ng-template>
   </mat-tab-group> -->
 
-  <mat-tab-group fitInkBarToContent>
-    <mat-tab label="OutSystems" [disabled]="!isAutentication$" ></mat-tab>
-    <mat-tab label="DataBases" [disabled]="!isAutentication$"></mat-tab>
+  <mat-tab-group fitInkBarToContent color="aliceblue">
+    <mat-tab label="OutSystems" [disabled]="!isAutentication$" color="aliceblue"></mat-tab>
+    <mat-tab label="DataBases" [disabled]="!isAutentication$" color="aliceblue"></mat-tab>
 
-    <mat-tab label="About"></mat-tab>
+    <mat-tab label="About" color="aliceblue"></mat-tab>
   </mat-tab-group>
 </header>
