--- a/Debora_OutSystem/src/app/_start-pages/start-components/body/header/header.component.scss
+++ b/Debora_OutSystem/src/app/_start-pages/start-components/body/header/header.component.scss
@@ -1,9 +1,5 @@
 
 
+/*Por ser biblioteca o Angular Material interfere no css só funciona aqui no CSS Pai de todos**/
 
 
-header {
-  width: 100%;
-  
-
-}
